Refactor the documentation build process (#311)
* Refactor the documentation build process

Significant improvements:
* Allow easy isolated local builds via a dedicated Tox environment
* Configure Sphinx to use consistent packages and theme across local, CI,
  and ReadTheDocs builds; local builds now look the same as the published
  RTD pages
* Explicitly add a ReadTheDocs configuration as code, per their documented
  best practices
* Remove lots of dead code and simplify the Sphinx configuration file
* Build docs in a dedicated CI step and enable stricter warning checking

* Fix docutils related build error.

* Relax Sphinx version.

* Invalidate RTD build cache.

* No need to combine coverage reporting I think.

* Add combining again.

Co-authored-by: Jannis Leidel <jannis@leidel.info>

--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,9 @@
 skipsdist = true
 usedevelop = true
 minversion = 1.8
-whitelist_externals = sphinx-build
 envlist =
     py36-checkqa
+    docs
     py{36,37,py36,py37}-dj{22,31,32}
     py{38,39,py38}-dj{22,31,32,40,main}
     py{310}-dj{32,40,main}
@@ -38,7 +38,7 @@ extras = testing
 commands =
     python --version
     {envbindir}/coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
-    coverage combine . tests/docs
+    coverage combine . tests docs
     coverage report -m --skip-covered
     coverage xml
 
@@ -52,3 +52,16 @@ deps =
     flake8
     twine
     check-manifest
+
+[testenv:docs]
+setenv =
+deps =
+    -r docs/requirements.txt
+commands =
+    sphinx-build \
+        -b html \
+        -a \
+        -W \
+        -n \
+        docs \
+        docs/_build/html
