Update Django 4.0 stable versions

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ deps =
     dj22: django~=2.2.17
     dj31: django~=3.1.3
     dj32: django~=3.2.9
-    dj40: django>=4.0b1,<4.1
+    dj40: django~=4.0.0
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
