Fixed #336 -- Update Python and Django versions

--- a/tox.ini
+++ b/tox.ini
@@ -3,22 +3,20 @@ skipsdist = true
 usedevelop = true
 minversion = 1.8
 envlist =
-    py36-checkqa
+    py37-checkqa
     docs
-    py{36,37,py36,py37}-dj{22,31,32}
-    py{38,39,py38}-dj{22,31,32,40,main}
-    py{310}-dj{32,40,main}
+    py{37,py37}-dj{32}
+    py{38,py38,39,py39,310}-dj{32,40,41,main}
 
 [gh-actions]
 python =
-    3.6: py36,flake8,readme
-    3.7: py37
+    3.7: py37,flake8,readme
     3.8: py38
     3.9: py39
     3.10: py310
-    pypy-3.6: pypy36
     pypy-3.7: pypy37
     pypy-3.8: pypy38
+    pypy-3.9: pypy39
 
 [testenv]
 usedevelop = true
@@ -27,10 +25,9 @@ setenv =
     DJANGO_CONFIGURATION = Test
     COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
 deps =
-    dj22: django~=2.2.17
-    dj31: django~=3.1.3
     dj32: django~=3.2.9
     dj40: django~=4.0.0
+    dj41: django~=4.1.0
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
@@ -42,7 +39,7 @@ commands =
     coverage report -m --skip-covered
     coverage xml
 
-[testenv:py36-checkqa]
+[testenv:py37-checkqa]
 commands =
     flake8 {toxinidir}
     check-manifest -v
