--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
     docs
     py{37,py37}-dj{32}
     py{38,py38,39,py39,310}-dj{32,40,41,main}
+    py{311}-dj{41,main}
 
 [gh-actions]
 python =
@@ -14,6 +15,7 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310
+    3.11: py311
     pypy-3.7: pypy37
     pypy-3.8: pypy38
     pypy-3.9: pypy39
@@ -27,7 +29,7 @@ setenv =
 deps =
     dj32: django~=3.2.9
     dj40: django~=4.0.0
-    dj41: django~=4.1.0
+    dj41: django~=4.1.3
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
