--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ deps =
     dj32: django~=3.2.9
     dj40: django~=4.0.0
     dj41: django~=4.1.3
+    dj42: django~=4.2.0a1
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
