Run dj42 and djmain in CI

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ envlist =
     py37-checkqa
     docs
     py{37,py37}-dj{32}
-    py{38,py38,39,py39,310}-dj{32,40,41}
-    py{311}-dj{41}
+    py{38,py38,39,py39}-dj{32,40,41,42}
+    py{310}-dj{32,40,41,42,main}
+    py{311}-dj{41,42,main}
 
 [gh-actions]
 python =
