--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ envlist =
     py37-checkqa
     docs
     py{37,py37}-dj{32}
-    py{38,py38,39,py39,310}-dj{32,40,41}
-    py{311}-dj{41}
+    py{38,py38,39,py39}-dj{32,40,41,42}
+    py{310}-dj{32,40,41,42,main}
+    py{311}-dj{41,42,main}
 
 [gh-actions]
 python =
@@ -30,6 +31,7 @@ deps =
     dj32: django~=3.2.9
     dj40: django~=4.0.0
     dj41: django~=4.1.3
+    dj42: django~=4.2.0a1
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
