Add pypy 3.10 to the testing matrix

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envlist =
     docs
     py{37,py37}-dj{32}
     py{38,py38,39,py39}-dj{32,40,41,42}
-    py{310}-dj{32,40,41,42,main}
+    py{310,py310}-dj{32,40,41,42,main}
     py{311}-dj{41,42,main}
 
 [gh-actions]
@@ -20,6 +20,7 @@ python =
     pypy-3.7: pypy37
     pypy-3.8: pypy38
     pypy-3.9: pypy39
+    pypy-3.10: pypy310
 
 [testenv]
 usedevelop = true
