--- a/tox.ini
+++ b/tox.ini
@@ -3,23 +3,18 @@ skipsdist = true
 usedevelop = true
 minversion = 1.8
 envlist =
-    py37-checkqa
+    py311-checkqa
     docs
-    py{37,py37}-dj{32}
-    py{38,py38,39,py39}-dj{32,40,41,42}
-    py{310,py310}-dj{32,40,41,42,main}
-    py{311}-dj{41,42,main}
+    py{38,39}-dj{32,41,42}
+    py{310,py310}-dj{32,41,42,50,main}
+    py{311}-dj{41,42,50,main}
 
 [gh-actions]
 python =
-    3.7: py37,flake8,readme
     3.8: py38
     3.9: py39
     3.10: py310
-    3.11: py311
-    pypy-3.7: pypy37
-    pypy-3.8: pypy38
-    pypy-3.9: pypy39
+    3.11: py311,flake8,readme
     pypy-3.10: pypy310
 
 [testenv]
@@ -30,9 +25,9 @@ setenv =
     COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
 deps =
     dj32: django~=3.2.9
-    dj40: django~=4.0.0
     dj41: django~=4.1.3
     dj42: django~=4.2.0
+    dj50: django~=5.0.0a1
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
@@ -44,7 +39,7 @@ commands =
     coverage report -m --skip-covered
     coverage xml
 
-[testenv:py37-checkqa]
+[testenv:py311-checkqa]
 commands =
     flake8 {toxinidir}
     check-manifest -v
