--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ deps =
     dj32: django~=3.2.9
     dj41: django~=4.1.3
     dj42: django~=4.2.0
-    dj50: django~=5.0.0a1
+    dj50: django~=5.0.0rc1
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
