Fix #372 -- Add support for Python 3.12

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     py{38,39}-dj{32,41,42}
     py{310,py310}-dj{32,41,42,50,main}
     py{311}-dj{41,42,50,main}
+    py{312}-dj{50,main}
 
 [gh-actions]
 python =
@@ -15,6 +16,7 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311,flake8,readme
+    3.12: py312
     pypy-3.10: pypy310
 
 [testenv]
@@ -29,6 +31,8 @@ deps =
     dj42: django~=4.2.0
     dj50: django~=5.0.0a1
     djmain: https://github.com/django/django/archive/main.tar.gz
+    py312: setuptools
+    py312: wheel
     coverage
     coverage_enable_subprocess
 extras = testing
