--- a/tox.ini
+++ b/tox.ini
@@ -5,18 +5,19 @@ minversion = 1.8
 envlist =
     py311-checkqa
     docs
-    py{38,39}-dj{32,41,42}
+    py{39}-dj{32,41,42}
     py{310,py310}-dj{32,41,42,50,main}
-    py{311}-dj{41,42,50,main}
-    py{312}-dj{50,main}
+    py{311}-dj{41,42,50,51,main}
+    py{312}-dj{50,51,main}
+    py{313}-dj{50,51,main}
 
 [gh-actions]
 python =
-    3.8: py38
     3.9: py39
     3.10: py310
     3.11: py311,flake8,readme
     3.12: py312
+    3.13: py313
     pypy-3.10: pypy310
 
 [testenv]
@@ -29,10 +30,13 @@ deps =
     dj32: django~=3.2.9
     dj41: django~=4.1.3
     dj42: django~=4.2.0
-    dj50: django~=5.0.0rc1
+    dj50: django~=5.0.0
+    dj51: django~=5.1.0
     djmain: https://github.com/django/django/archive/main.tar.gz
     py312: setuptools
     py312: wheel
+    py313: setuptools
+    py313: wheel
     coverage
     coverage_enable_subprocess
 extras = testing
