PEP 621: Migrate from setup.py to pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
 skipsdist = true
+skip_missing_interpreters = true
+isolated_build = true
 usedevelop = true
 minversion = 1.8
 envlist =
@@ -25,7 +27,7 @@ usedevelop = true
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings.main
     DJANGO_CONFIGURATION = Test
-    COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
+    COVERAGE_PROCESS_START = {toxinidir}/pyproject.toml
 deps =
     dj32: django~=3.2.9
     dj41: django~=4.1.3
@@ -44,16 +46,17 @@ commands =
     python --version
     {envbindir}/coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
     coverage combine . tests docs
-    coverage report -m --skip-covered
+    coverage report --show-missing --skip-covered
     coverage xml
 
 [testenv:py311-checkqa]
 commands =
     flake8 {toxinidir}
-    check-manifest -v
-    python setup.py sdist
+    check-manifest --verbose
+    python -m build
     twine check dist/*
 deps =
+    build
     flake8
     twine
     check-manifest
@@ -64,9 +67,13 @@ deps =
     -r docs/requirements.txt
 commands =
     sphinx-build \
-        -b html \
-        -a \
-        -W \
-        -n \
+        --builder html \
+        --write-all \
+        --fail-on-warning \
+        --nitpicky \
         docs \
         docs/_build/html
+
+[flake8]
+exclude = .tox,docs/*,.eggs
+ignore = E124,E127,E128,E501,W503
