--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
     - name: Cache
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
         key:
@@ -41,6 +41,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade "tox<4" "tox-gh-actions<3"
+        python -m pip install --editable ".[test]"
 
     - name: Tox tests
       run: |
