--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,8 +40,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade "tox<4" "tox-gh-actions<3"
-        python -m pip install --editable ".[test]"
+        python -m pip install --upgrade tox tox-gh-actions
+        python -m pip install --editable ".[testing]"
 
     - name: Tox tests
       run: |
