python -m pip install coverage[toml]

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ usedevelop = true
 [testenv]
 package = editable
 deps =
-    coverage
+    coverage[toml]
     coverage_enable_subprocess
     dj32: django~=3.2.9
     dj41: django~=4.1.3
