--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade tomli tox tox-gh-actions
+        python -m pip install --upgrade tox tox-gh-actions
         python -m pip install --editable ".[testing]"
 
     - name: Tox tests
