env: DJANGO_CONFIGURATION and DJANGO_SETTINGS_MODULE

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,9 @@ jobs:
         python -m pip install --editable ".[testing]"
 
     - name: Tox tests
+      env:
+        DJANGO_CONFIGURATION: Dev
+        DJANGO_SETTINGS_MODULE: mysite.settings
       run: |
         tox --verbose
 
