--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ set_env =
     DJANGO_SETTINGS_MODULE = tests.settings.main
 commands =
     python --version
-    {envbindir}/coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
+    {envbindir}/coverage run django-cadmin test -v2 {posargs:tests}
     coverage combine . tests docs
     coverage report --show-missing --skip-covered
     coverage xml
