which django-cadmin

--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,14 @@ set_env =
     COVERAGE_PROCESS_START = {toxinidir}/pyproject.toml
     DJANGO_CONFIGURATION = Test
     DJANGO_SETTINGS_MODULE = tests.settings.main
+allowlist_externals =
+    django-cadmin
+    echo
+    which
 commands =
     python --version
+    echo {toxinidir} {envbindir}
+    which django-cadmin
     {envbindir}/coverage run django-cadmin test -v2 {posargs:tests}
     coverage combine . tests docs
     coverage report --show-missing --skip-covered
