--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,7 @@ commands =
     python --version
     echo {toxinidir} {envbindir}
     which django-cadmin
-    {envbindir}/coverage run django-cadmin test -v2 {posargs:tests}
+    {envbindir}/coverage run $(which django-cadmin) test -v2 {posargs:tests}
     coverage combine . tests docs
     coverage report --show-missing --skip-covered
     coverage xml
