--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ set_env =
     COVERAGE_PROCESS_START = {toxinidir}/pyproject.toml
     DJANGO_CONFIGURATION = Test
     DJANGO_SETTINGS_MODULE = tests.settings.main
+    DJANGO_CADMIN = $(which django-cadmin)
 allowlist_externals =
     django-cadmin
     echo
@@ -42,7 +43,7 @@ commands =
     python --version
     echo {toxinidir} {envbindir}
     which django-cadmin
-    {envbindir}/coverage run $(which django-cadmin) test -v2 {posargs:tests}
+    {envbindir}/coverage run DJANGO_CADMIN test -v2 {posargs:tests}
     coverage combine . tests docs
     coverage report --show-missing --skip-covered
     coverage xml
